changed about link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         
             <a class = "link"
-          href="https://forever-king-clark.glitch.me/about.html
+          href="about.html
 "
           target="_self"
         >
