changed more links

--- a/index.html
+++ b/index.html
@@ -45,49 +45,49 @@
 
         
             <a class = "link"
-          href="about.html
+          href="/about.html
 "
           target="_self"
         >
           <h1>About Us</h1>
         </a>
            <a class = "link"
-          href="https://forever-king-clark.glitch.me/recordings.html
+          href="/recordings.html
 "
           target="_self"
         >
           <h1>Recordings</h1>
         </a>
            <a class = "link"
-          href="https://forever-king-clark.glitch.me/shows.html
+          href="/shows.html
 "
           target="_self"
         >
           <h1>Upcoming Shows</h1>
         </a>
            <a class = "link"
-          href="https://forever-king-clark.glitch.me/videos.html
+          href="/videos.html
 "
           target="_self"
         >
           <h1>Videos</h1>
         </a>
         <a class = "link"
-          href="https://forever-king-clark.glitch.me/lyrics.html
+          href="/lyrics.html
 "
           target="_self"
         >
           <h1>The Lyrics</h1>
         </a>
           <a class = "link"
-          href="https://forever-king-clark.glitch.me/epk.html
+          href="/epk.html
 "
           target="_self"
         >
           <h1>EPK</h1>
         </a>
           <a class = "link"
-          href="https://forever-king-clark.glitch.me/contact.html
+          href="contact.html
 "
           target="_self"
         >
