removed slash from links

--- a/index.html
+++ b/index.html
@@ -45,42 +45,42 @@
 
         
             <a class = "link"
-          href="/about.html
+          href="about.html
 "
           target="_self"
         >
           <h1>About Us</h1>
         </a>
            <a class = "link"
-          href="/recordings.html
+          href="recordings.html
 "
           target="_self"
         >
           <h1>Recordings</h1>
         </a>
            <a class = "link"
-          href="/shows.html
+          href="shows.html
 "
           target="_self"
         >
           <h1>Upcoming Shows</h1>
         </a>
            <a class = "link"
-          href="/videos.html
+          href="videos.html
 "
           target="_self"
         >
           <h1>Videos</h1>
         </a>
         <a class = "link"
-          href="/lyrics.html
+          href="lyrics.html
 "
           target="_self"
         >
           <h1>The Lyrics</h1>
         </a>
           <a class = "link"
-          href="/epk.html
+          href="epk.html
 "
           target="_self"
         >
