--- a/lyrics.html
+++ b/lyrics.html
@@ -18,7 +18,7 @@
     <title>forever king clark</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
@@ -288,7 +288,7 @@
               >TODO</span> for next steps!
         --></p>
           <a class = "link"
-          href="https://forever-king-clark.glitch.me/
+          href="index.html
 "
           target="_self"
         >
