--- a/epk.html
+++ b/epk.html
@@ -18,7 +18,7 @@
     <title>forever king clark</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
@@ -204,7 +204,7 @@ src="https://www.youtube.com/embed/jmwXlP_XDiU">
      </p>
         <!--  🚧 TODO: ADD BUTTON HERE -->
           <a class = "link"
-          href="https://forever-king-clark.glitch.me/
+          href="index.html
 "
           target="_self"
         >
