--- a/recordings.html
+++ b/recordings.html
@@ -18,7 +18,7 @@
     <title>forever king clark</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
@@ -57,7 +57,7 @@
 </a>
           </center>
       <a class = "link"
-          href="https://forever-king-clark.glitch.me/
+          href="index.html
 "
           target="_self"
         >
