--- a/recordings.html
+++ b/recordings.html
@@ -45,6 +45,11 @@
           alt="Kids"
           title="Listen to Kids" >
 </a>
+<a href="https://open.spotify.com/track/1mAlaSsdpuN7PVpBlT8Wr5?si=99c41417dfac4b05">
+  <img src="fdyc final 5.png" class="song"
+          alt="Kids"
+          title="Listen to Kids" >
+</a>
         <a href="https://open.spotify.com/track/45BjM7DDVoICD6noHm9Aol?si=3d4b3c74814543f1">
   <img src="https://cdn.glitch.global/9715d1f0-f7e2-4855-bb83-9d09804b140e/vacation%205%202.png?v=1725073632693" class="song"
           alt="Vacation"
