added press link

--- a/epk.html
+++ b/epk.html
@@ -94,11 +94,20 @@ src="https://www.youtube.com/embed/jmwXlP_XDiU">
           Press Links
         </h2>
         <p>
+          <a class = "link"
+          href="https://rockermag.com/a-nostalgic-farewell-wrapped-in-surf-rock-warmth-forever-king-clark-summers-gone/
+  "
+          target="_blank"
+        >
+        
+          <p>A Nostalgic Farewell Wrapped In Surf Rock Warmth: Forever King Clark – Summer’s Gone</p>
+        </a>
             <a class = "link"
         href="https://www.shoreptsrecords.com/blog/fkcs-voice-is-too-loud
 "
         target="_blank"
       >
+      
         <p>Shore Points Records Local Summer Blog Post</p>
       </a>
                 <a class = "link"
