--- a/fdycextras.html
+++ b/fdycextras.html
@@ -40,7 +40,13 @@
         </h2>
        
   <iframe width="auto" height="auto"
-src="https://www.youtube.com/embed/TTiKV3s9Vxs">
+src="https://www.youtube.com/embed/-TPfHIEUlko">
+</iframe>
+<iframe width="auto" height="auto"
+src="https://youtube.com/embed/NCosec-638k">
+</iframe>
+<iframe width="auto" height="auto"
+src="https://youtube.com/embed/2XtgI79_aPI">
 </iframe>
         
          <h2 > 
