--- a/contactus.html
+++ b/contactus.html
@@ -1,6 +1,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style2.css" />
-
+<head>
+    <title>Contact</title>
+    <link rel="icon" type="image/x-icon" href="fkc logo blob.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 <style>
 table {
     width: 60%;
@@ -26,7 +30,7 @@ table {
    
   <img
           src="fkc logo blob.png"
-          class="illustration2"
+          class="illustration"
           alt="king clark"
           width="8%"
           height="10%"
@@ -36,18 +40,18 @@ table {
  
   <h1>Contact<h1>
     <hr>
-    <div class="bio">
+    <div class="">
 
         <table>
             <tr>
                 <th>
                     <p>
-                        For booking info or if you just want to say 'hi' <br>feel free to contact us at the following!
+                        For booking info, questions, or if you just want to say 'hi' <br>feel free to contact us at the following!
                      <br>
                        <br>
-                       Email: kingclarkmusic.nj@gmail.com<br>
-                       Instagram: DM us at @foreverkingclark<br>
-                       Phone:732-804-6668<br>
+                       <strong>Email:</strong> kingclarkmusic.nj@gmail.com<br>
+                       <strong>Instagram:</strong> DM us at @foreverkingclark<br>
+                       <strong>Phone:</strong>732-804-6668<br>
                      
                        <br>
                        We are booking full band, partial band, and solo shows throughout the year so feel free to reach out!
