--- a/music.html
+++ b/music.html
@@ -1,6 +1,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style2.css" />
-
+<head>
+    <title>Music</title>
+    <link rel="icon" type="image/x-icon" href="fkc logo blob.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 <style>
 table {
     width: 80%;
@@ -17,8 +21,8 @@ table {
   <li><a href="newvideo.html">Videos</a></li>
   <li><a href="upcoming.html">Shows</a></li>
     <li><a href="bio.html">Bio</a></li>
-    <li><a href="about.asp">Press Kit</a></li>
-    <li><a href="presskit.html">Contact</a></li>
+    <li><a href="presskit.html">Press Kit</a></li>
+    <li><a href="contactus.html">Contact</a></li>
   </div>
 </ul>
 
@@ -27,7 +31,7 @@ table {
    
   <img
           src="fkc logo blob.png"
-          class="illustration2"
+          class="illustration"
           alt="king clark"
           width="8%"
           height="10%"
@@ -42,7 +46,7 @@ table {
             <tr>
                 <th><img
                     src="fdyc final 5.png"
-                    class="illustration2"
+                    class="illustration"
                     alt="king clark"
                     width="100%"
                     height="auto"
@@ -50,7 +54,7 @@ table {
                  /></th>
                 <th><img
                     src="fdyc back cover 1.png"
-                    class="illustration2"
+                    class="illustration"
                     alt="king clark"
                     width="100%"
                     height="auto"
