--- a/test.html
+++ b/test.html
@@ -1,7 +1,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style2.css" />
-
+<head>
+    <title>Forever King Clark</title>
+    <link rel="icon" type="image/x-icon" href="fkc logo blob.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@0;1&display=swap');
     table {
           table-layout: fixed;
         }
@@ -25,7 +30,7 @@
    
   <img
           src="fkc logo blob.png"
-          class="illustration2"
+          class="illustration"
           alt="king clark"
           width="8%"
           height="10%"
@@ -36,17 +41,17 @@
   <h1>We're a band. Thanks for coming.<h1>
   
     
-    <h2>
+    <h3>
         Forever King Clark is an indie rock band from Asbury Park,NJ making warbly coastal music.
-      <h2>
-        <iframe width="560" height="315"
+      <h3>
+        <iframe width="575vw" height="323.43vw"
 src="https://youtube.com/embed/NCosec-638k">
 </iframe>
 
-      <h2>
-      Since 2023 they have been active around Asbury Park, Brooklyn, and Washington D.C and elsewhere making music to wiggle to.
-      <h2>   
-        <iframe width="560" height="315"
+      <h3>
+      Since 2023 they have been active around Asbury Park, Brooklyn, and Washington D.C and elsewhere making music to wiggle to. Their lineup includes primary singer-songwriter and guitarist Bobby Kallok, drummer John-Michael Monroy, and bassist Amy Evans. 
+      <h3>   
+        <iframe width="575vw" height="323.43vw"
         src="https://www.youtube.com/embed/vlIeYiohpAs">
         </iframe>
       </center>   
@@ -66,8 +71,8 @@ src="https://youtube.com/embed/NCosec-638k">
             <strong><center>warbly coastal indie rock</center></strong><br><br>
             Since then the band has released their first EP, "Five Dollar Yacht Club", played shows around Asbury Park, Brooklyn, and Washington D.C. and has 
             had an all around good time.</td>
-        <td>email:kingclarkmusic.nj@gmail.com<br>
-            Instagram DM:@foreverkingclark<br>
+        <td><strong>Email:</strong>kingclarkmusic.nj@gmail.com<br>
+            <strong>Instagram DM:</strong>@foreverkingclark<br>
         or talk to us in person when you see us</td>
     </tr>
     </table>       
