--- a/upcoming.html
+++ b/upcoming.html
@@ -1,6 +1,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style2.css" />
-
+<head>
+    <title>Shows</title>
+    <link rel="icon" type="image/x-icon" href="fkc logo blob.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 <style>
 table {
     width: 80%;
@@ -27,7 +31,7 @@ table {
    
   <img
           src="fkc logo blob.png"
-          class="illustration2"
+          class="illustration"
           alt="king clark"
           width="8%"
           height="10%"
