--- a/contactus.html
+++ b/contactus.html
@@ -11,7 +11,17 @@ table {
     border-collapse: collapse;
     table-layout: fixed;
     }
-    @media only screen and (max-width: 600px) {
+    @media only screen and (min-width: 600px) {
+    div.topnav{
+        display: none;
+    }
+}
+    @import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@0;1&display=swap');
+   
+        @media only screen and (max-width: 600px) {
+            div.navlink{
+                display: none;
+            }
     .main{
       margin-left: 0%;
     margin-right: 0%;
@@ -76,6 +86,24 @@ height:auto;
   </div>
 </ul>
 
+<div class="topnav">
+    <center>
+    <a href="#home" class="active">Menu</a>
+    <div id="myLinks">
+        <a href="test.html">Home</a>
+        <a href="music.html">Music</a>
+        <a href="newvideo.html">Videos</a>
+        <a href="upcoming.html">Shows</a>
+          <a href="bio.html">Bio</a>
+          <a href="presskit.html">Press Kit</a>
+          <a href="contactus.html">Contact</a>
+    </div>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+</center>
+  </div>
+
 <div class="main">
   <center>
    
@@ -136,3 +164,14 @@ height:auto;
  
  </center>
      </footer>
+
+     <script>
+        function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+        </script>
