--- a/test.html
+++ b/test.html
@@ -10,7 +10,17 @@
     table {
           table-layout: fixed;
         }
+        @media only screen and (min-width: 600px) {
+    div.topnav{
+        display: none;
+    }
+}
+    @import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@0;1&display=swap');
+   
         @media only screen and (max-width: 600px) {
+            div.navlink{
+                display: none;
+            }
     .main{
       margin-left: 0%;
     margin-right: 0%;
@@ -72,6 +82,23 @@ height:6%
     <li><a href="contactus.html">Contact</a></li>
   </div>
 </ul>
+<div class="topnav">
+    <center>
+    <a href="#home" class="active">Menu</a>
+    <div id="myLinks">
+        <a href="test.html">Home</a>
+        <a href="music.html">Music</a>
+        <a href="newvideo.html">Videos</a>
+        <a href="upcoming.html">Shows</a>
+          <a href="bio.html">Bio</a>
+          <a href="presskit.html">Press Kit</a>
+          <a href="contactus.html">Contact</a>
+    </div>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+</center>
+  </div>
 
 <div class="main">
   <center>
@@ -147,3 +174,14 @@ src="https://youtube.com/embed/NCosec-638k">
 
 </center>
     </footer>
+
+    <script>
+        function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+        </script>
