--- a/upcoming.html
+++ b/upcoming.html
@@ -11,9 +11,17 @@ table {
     border-collapse: collapse;
       table-layout: fixed;
     }
+    @media only screen and (min-width: 600px) {
+    div.topnav{
+        display: none;
+    }
+}
     @import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@0;1&display=swap');
    
         @media only screen and (max-width: 600px) {
+            div.navlink{
+                display: none;
+            }
     .main{
       margin-left: 0%;
     margin-right: 0%;
@@ -29,22 +37,22 @@ table {
     border-radius: 50%;
   }
   h1{
-    font-size: 18pt;
+    font-size: 16pt;
   }
   h2{
-    font-size: 18pt;
+    font-size: 16pt;
   }
   h3{
-    font-size:14pt
+    font-size:12pt
   }
   p{
-    font-size:14pt
+    font-size:12pt
   }
   td{
-    font-size:14pt
+    font-size:12pt
   }
   th{
-    font-size:14pt
+    font-size:12pt
   }
   .vidlarge{
     width:auto;
@@ -77,6 +85,24 @@ height:auto;
     <li><a href="contactus.html">Contact</a></li>
   </div>
 </ul>
+
+<div class="topnav">
+    <center>
+    <a href="#home" class="active">Menu</a>
+    <div id="myLinks">
+        <a href="test.html">Home</a>
+        <a href="music.html">Music</a>
+        <a href="newvideo.html">Videos</a>
+        <a href="upcoming.html">Shows</a>
+          <a href="bio.html">Bio</a>
+          <a href="presskit.html">Press Kit</a>
+          <a href="contactus.html">Contact</a>
+    </div>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+</center>
+  </div>
 
 <div class="main">
   <center>
@@ -181,3 +207,14 @@ height:auto;
  
  </center>
      </footer>
+
+     <script>
+        function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+        </script>
