--- a/upcoming.html
+++ b/upcoming.html
@@ -30,7 +30,7 @@ table {
     .fa {
     padding: 7px;
     font-size: 15px;
-    width: 15px;
+    width: auto;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
