--- a/contactus.html
+++ b/contactus.html
@@ -30,29 +30,29 @@ table {
     .fa {
     padding: 7px;
     font-size: 15px;
-    width: 15px;
+    width: auto;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
     border-radius: 50%;
   }
   h1{
-    font-size: 18pt;
+    font-size: 16pt;
   }
   h2{
-    font-size: 18pt;
+    font-size: 16pt;
   }
   h3{
-    font-size:14pt
+    font-size:12pt
   }
   p{
-    font-size:14pt
+    font-size:12pt
   }
   td{
-    font-size:14pt
+    font-size:12pt
   }
   th{
-    font-size:14pt
+    font-size:12pt
   }
   .vidlarge{
     width:auto;
