--- a/test.html
+++ b/test.html
@@ -37,12 +37,15 @@
   }
   h1{
     font-size: 16pt;
+    margin:10%;
   }
   h2{
     font-size: 16pt;
+    margin:10%;
   }
   h3{
-    font-size:12pt
+    font-size:12pt;
+    margin:10%;
   }
   p{
     font-size:12pt
@@ -129,7 +132,7 @@ src="https://youtube.com/embed/NCosec-638k">
         <iframe class='vidlarge' width="600" height="337"
         src="https://www.youtube.com/embed/vlIeYiohpAs">
         </iframe>
-        <br>
+      <br>
         <hr>
       </center>   
     
