--- a/contactus.html
+++ b/contactus.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=IM+Fell+French+Canon:ital@0;1&display=swap');
 table {
     width: 60%;
     border-collapse: collapse;
@@ -117,7 +118,7 @@ height:auto;
        />
  
  
-  <h1>Contact<h1>
+  <h1><i>Contact</i><h1>
     <hr>
     <div class="">
 
@@ -128,17 +129,20 @@ height:auto;
                         For booking info, questions, or if you just want to say 'hi' <br>feel free to contact us at the following!
                      <br>
                        <br>
-                       <strong>Email:</strong> kingclarkmusic.nj@gmail.com<br>
-                       <strong>Instagram:</strong> DM us at @foreverkingclark<br>
+                       <strong>Email:</strong><a class="subtle" href="mailto:kingclarkmusic.nj@gmail.com
+                    ">kingclarkmusic.nj@gmail.com</a><br>
+                    <strong>Instagram DM:</strong><a class="subtle" href="https://www.instagram.com/foreverkingclark/
+                    ">@foreverkingclark</a><br>
                        <strong>Phone:</strong>732-804-6668<br>
                      
                        <br>
                        We are booking full band, partial band, and solo shows throughout the year so feel free to reach out!
           </p>             
                 </div>
+               
                 <div class="item2">
                     <img
-                    src="fkc logo blob.png"
+                    src="https://drive.google.com/thumbnail?id=1P_QPMG6LHcA2bNgmMMlv3zS5ztQx-7R_"
                     class="illustration2"
                     alt="king clark"
                     width="100%"
@@ -158,7 +162,7 @@ height:auto;
  <a href="https://www.youtube.com/@KingClarkNJ
  " class="fa fa-youtube"></a>
  <a href="https://www.instagram.com/foreverkingclark/" class="fa fa-instagram"></a>
- <a href="https://open.spotify.com/artist/3Iv5HnPLViCtNH8peJCkS4?si=Q-7GtHd6QTaQJ4xVkKwOdA" class="fa fa-spotify"></a>
+ <a href=https://open.spotify.com/artist/6zxFPdnxURt5gG8E4fkS6e?si=43673ec2c0914cf2" class="fa fa-spotify"></a>
      <a href="https://king-clark.bandcamp.com/music" class="fa fa-bandcamp"></a>
          <a href="https://music.apple.com/us/artist/forever-king-clark/1739131040" class="fa fa-apple"></a>
  
