--- a/presskit.html
+++ b/presskit.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@0;1&display=swap');
     table {
         width: 60%;
           table-layout: fixed;
@@ -139,9 +140,9 @@ height:auto;
        />
   
  <center>
-  <h1>Press Kit<h1>
+  <h1><i>Press Kit</i><h1>
     <h2><a class="subtle" href="bio.html
-        "><h2>Bio</h2></a>
+        "><h2><i>Bio</i></h2></a>
     <hr>
     <div class="grid-container">
         <div class="item1">
@@ -161,7 +162,7 @@ height:auto;
 </center>
 <center>
     <h2><a class="subtle" href="newvideo.html
-        "><h2>Videos</h2></a></h2>
+        "><h2><i>Videos</i></h2></a></h2>
     <hr>
 
 <div class="grid-container">
@@ -185,7 +186,7 @@ height:auto;
 </center>
 <center>
 <h2><a class="subtle" href="music.html
-    "><h2>Music</h2></a></h2>
+    "><h2><i>Music</i></h2></a></h2>
 <hr>
 <div class="grid-container">
     <div class="item1">
@@ -208,7 +209,7 @@ height:auto;
 </div>
 </center>
 <center>
-<h2>Press</h2>
+<h2><i>Press</i></h2>
 <hr>
 <div class="grid-container">
     <div class="item3">
@@ -279,7 +280,7 @@ height:auto;
 </div>
 </center>
 <center>
-<h2>Past Shows</h2>
+<h2><i>Past Shows</i></h2>
 <hr>
 <div class="grid-container">
     <div class="item1">
@@ -327,7 +328,7 @@ height:auto;
 </div>
 </center>
 <center>
-<h2>Artists We've Played With</h2>
+<h2><i>Artists We've Played With</i></h2>
 <hr>
 <div class="grid-container">
     <div class="item3">
@@ -375,7 +376,7 @@ height:auto;
 </div>
 </center>
 <center>
-<h2>Festivals and Events</h2>
+<h2><i>Festivals and Events</i></h2>
 <hr>
 <div class="grid-container">
     <div class="item1">
@@ -407,13 +408,13 @@ height:auto;
 </div>
 </center>
 <center>
-<h2>Photos</h2>
+<h2><i>Photos</i></h2>
 <hr>
 <div class="grid-container">
     <div class="itema">
         <img
         src="1.jpg"
-        class="illustration2"
+        class="illustration"
         alt="king clark"
         width="100%"
         height="auto"
@@ -423,7 +424,7 @@ height:auto;
     <div class="itemb">
         <h2>Bobby at Lakehouse Studio</h2>
         <a class = "subtle"
-        href="https://www.shoreptsrecords.com/blog/fkcs-voice-is-too-loud
+        href="https://drive.google.com/file/d/1RjdD0kK06EceKKBoyzZHuLcw1_EUgAc2/view?usp=share_link
 "
         target="_blank"
       >
@@ -434,7 +435,7 @@ height:auto;
     <div class="itemc">
         <img
         src="fdyc final 5.png"
-        class="illustration2"
+        class="illustration"
         alt="king clark"
         width="100%"
         height="auto"
@@ -444,7 +445,7 @@ height:auto;
     <div class="itemd">
         <h2>Five Dollar Yacht Club EP Cover</h2>
         <a class = "subtle"
-        href="https://www.shoreptsrecords.com/blog/fkcs-voice-is-too-loud
+        href="https://drive.google.com/file/d/1Wf4lSmOwvqPwvtJVRbtx-sCadxrvtA5i/view?usp=share_link
 "
         target="_blank"
       >
@@ -455,12 +456,14 @@ height:auto;
 </div>
 </center>
 <center>
-<h2><a class="subtle" href="contactus.html"><h2>Contact</h2></a></h2>
+<h2><a class="subtle" href="contactus.html"><h2><i>Contact</i></h2></a></h2>
 <hr>
 <p>
     For booking, general inquiries, or anything else feel free to contact us<br>
-<strong>Email:</strong>kingclarkmusic.nj@gmail.com<br>
-            <Strong>Instagram DM:</strong>@foreverkingclark<br>
+    <strong>Email:</strong><a class="subtle" href="mailto:kingclarkmusic.nj@gmail.com
+    ">kingclarkmusic.nj@gmail.com</a><br>
+    <strong>Instagram DM:</strong><a class="subtle" href="https://www.instagram.com/foreverkingclark/
+    ">@foreverkingclark</a><br>
             <strong>Phone:</strong>732-804-6668
         </p>
         </center>
