--- a/upcoming.html
+++ b/upcoming.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=IM+Fell+French+Canon:ital@0;1&display=swap');
 table {
     width: 80%;
     border-collapse: collapse;
@@ -117,7 +118,7 @@ height:auto;
        />
  
  
-  <h1>Upcoming Shows<h1>
+  <h1><i>Upcoming Shows</i><h1>
     <hr>
 
     <div class="grid-container">
@@ -139,7 +140,7 @@ height:auto;
         </div>
     </div>
 
-    <h1>Past Shows<h1>
+    <h1><i>Past Shows</i><h1>
         <hr>
         
 
@@ -201,7 +202,7 @@ height:auto;
  <a href="https://www.youtube.com/@KingClarkNJ
  " class="fa fa-youtube"></a>
  <a href="https://www.instagram.com/foreverkingclark/" class="fa fa-instagram"></a>
- <a href="https://open.spotify.com/artist/3Iv5HnPLViCtNH8peJCkS4?si=Q-7GtHd6QTaQJ4xVkKwOdA" class="fa fa-spotify"></a>
+ <a href="https://open.spotify.com/artist/6zxFPdnxURt5gG8E4fkS6e?si=43673ec2c0914cf2" class="fa fa-spotify"></a>
      <a href="https://king-clark.bandcamp.com/music" class="fa fa-bandcamp"></a>
          <a href="https://music.apple.com/us/artist/forever-king-clark/1739131040" class="fa fa-apple"></a>
  
