--- a/upcoming.html
+++ b/upcoming.html
@@ -77,7 +77,7 @@ height:auto;
     </style>
 <ul>
   <div class="navlink">
-  <li><a href="test.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="music.html">Music</a></li>
   <li><a href="newvideo.html">Videos</a></li>
   <li><a href="upcoming.html">Shows</a></li>
@@ -91,7 +91,7 @@ height:auto;
     <center>
     <a href="#home" class="active">Menu</a>
     <div id="myLinks">
-        <a href="test.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="music.html">Music</a>
         <a href="newvideo.html">Videos</a>
         <a href="upcoming.html">Shows</a>
@@ -124,10 +124,10 @@ height:auto;
     <div class="grid-container">
         <div class="item1">
             <p>
-            9/22 - Georgie's - Asbury Park<br>
+            9/22/25 - Georgie's - Asbury Park<br>
          
-                    10/4 - ???<br>
-                    10/17 - Asbury Book Co-op - Asbury Park<br>
+                    10/4/25- ???<br>
+                    10/17/25 - Asbury Book Co-op - Asbury Park<br>
             </p>
         </div>
         <div class="item2">
@@ -161,22 +161,22 @@ height:auto;
                         1/30/25 - First Live - Brooklyn<br>
                          2/20/25 - Carton Brewing - Atlantic Highlands<br>
                         2/23/25 - WTSR Undergound Sessions - Ewing<br>
-                         3/8 - The Asbury - Asbury Park<br>
-                         3/27 - National Cherry Blossom Festival - Washington DC<br>
-                         4/5 - Toms River Brewery - Toms River<br>
-                         4/14 - Georgie's - Asbury Park<br>
-                         4/26 - Shop and Jam at Lofidelic Records - Belmar<br>
-                         5/4 - Riverview Farmers Market - Jersey City<br>
-                        5/10 - Belmar Porchfest - Belmar<br>
-                          5/18 - Freehold Porchfest - Freehold<br>
-                        5/24 - Cafe Improv - Princeton<br>
-                          5/29 - Asbury Park Brewery - Asbury Park<br>
-                        6/6 - First Fridays at The Station - Asbury Park<br>
-                        6/22 - Wild Air Brewery- Asbury Park<br>
-                        7/5 - 3BR - Keyport<br>
-                        7/26 - Pino's - Highland Park<br>
-                        7/30 - Asbury Book Co-op Nashbury Songwriter Circle - Asbury Park<br>
-                        8/2 - Wild Air Beerworks - Asbury Park <br>
+                         3/8/25 - The Asbury - Asbury Park<br>
+                         3/27/25 - National Cherry Blossom Festival - Washington DC<br>
+                         4/5/25 - Toms River Brewery - Toms River<br>
+                         4/14/25 - Georgie's - Asbury Park<br>
+                         4/26/25 - Shop and Jam at Lofidelic Records - Belmar<br>
+                         5/4/25 - Riverview Farmers Market - Jersey City<br>
+                        5/10/25 - Belmar Porchfest - Belmar<br>
+                          5/18/25 - Freehold Porchfest - Freehold<br>
+                        5/24/25 - Cafe Improv - Princeton<br>
+                        5/29/25 - Asbury Park Brewery - Asbury Park<br>
+                        6/6/25 - First Fridays at The Station - Asbury Park<br>
+                        6/22/25 - Wild Air Brewery- Asbury Park<br>
+                        7/5/25 - 3BR - Keyport<br>
+                        7/26/25 - Pino's - Highland Park<br>
+                        7/30/25 - Asbury Book Co-op Nashbury Songwriter Circle - Asbury Park<br>
+                        8/2/25 - Wild Air Beerworks - Asbury Park <br>
                         
                     </p>
             </div>
