--- a/contactus.html
+++ b/contactus.html
@@ -77,7 +77,7 @@ height:auto;
     </style>
 <ul>
   <div class="navlink">
-  <li><a href="test.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="music.html">Music</a></li>
   <li><a href="newvideo.html">Videos</a></li>
   <li><a href="upcoming.html">Shows</a></li>
@@ -91,7 +91,7 @@ height:auto;
     <center>
     <a href="#home" class="active">Menu</a>
     <div id="myLinks">
-        <a href="test.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="music.html">Music</a>
         <a href="newvideo.html">Videos</a>
         <a href="upcoming.html">Shows</a>
