--- a/epk.html
+++ b/epk.html
@@ -137,10 +137,11 @@ src="https://www.youtube.com/embed/jmwXlP_XDiU">
           Belmar Arts Center - Belmar<br>
           Departed Soles - Jersey City<br>
           Gaslight - Atlantic Highlands<br>
-          First Live - Brooklyn<br>
+       
           Monmouth University- West Long Branch<br>
         Riverview Farmers Market - Jersey City<br>
            Asbury Lanes - Asbury Park<br>
+           Dublin House - Red Bank<br>
           Cafe Improv - Princeton <br>
           The Asbury - Asbury Park<br>
           Carton Brewing - Atlantic Highlands <br>
