--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ src="https://youtube.com/embed/NCosec-638k">
 </iframe>
 
       <h3>
-      Since 2023 they have been active around the Jersey Shore, Brooklyn, and Washington D.C and elsewhere making music to wiggle to. Their lineup includes singer-songwriter and guitarist Bobby Kallok, drummer John-Michael Monroy, and bassist Amy Evans. 
+      Since 2023 they have been active around the Jersey Shore, Brooklyn, and Washington D.C and elsewhere making music to wiggle to. Their lineup includes singer-songwriter and guitarist Bobby Kallok, drummer John-Michael Monroy, key master Dan and bassist Amy Evans. 
       <h3>   
         <iframe class='vidlarge' width="600" height="337"
         src="https://www.youtube.com/embed/vlIeYiohpAs">
