--- a/presskit.html
+++ b/presskit.html
@@ -146,7 +146,7 @@ height:auto;
     <hr>
     <div class="grid-container">
         <div class="item1">
-<p> Forever King Clark is a three piece indie rock band based out of Asbury Park, New Jersey. Influenced by artists such as Mac DeMarco, Her's, and Real Estate their sound can be described as "warbly coastal indie". Over the past few years the band has made appearances at the National Cherry Blossom Festival, What A Wonderful Year Festival, and Shore Point's Record's Local Summer Celebration. They have also made appearances on WTSR, WMCX, and Asbury Park TV. The current lineup includes Bobby Kallok on vocals and guitar, John-Michael Monroy on drums, and Amy Evans on bass.</p>
+<p> Forever King Clark is a four piece indie rock band based out of Asbury Park, New Jersey. Influenced by artists such as Mac DeMarco, Her's, and Real Estate their sound can be described as "warbly coastal indie". Over the past few years the band has made appearances at the National Cherry Blossom Festival, What A Wonderful Year Festival, and Shore Point's Record's Local Summer Celebration. They have also made appearances on WTSR, WMCX, and Asbury Park TV. The current lineup includes Bobby Kallok on vocals and guitar, John-Michael Monroy on drums, Dan on keys and Amy Evans on bass.</p>
         </div>
         <div class="item2">
             <img
@@ -353,6 +353,7 @@ height:auto;
     Jack Flowers and The Petal Tones<br>
     Separatr<br>
     The Modbeats<br>
+    Cory Blair<br>
     Emma Engel<br>
     Ev-o<br>
     Above The Moon<br>
@@ -366,7 +367,7 @@ height:auto;
     MINNQ<br>
     Amanda Adams<br>
     Laura Mock<br>
-  
+  Gulf of Mexico<br>
     Pretty Vacant<br>
     Leah Thompson<br>
     The Circus<br>
