--- a/upcoming.html
+++ b/upcoming.html
@@ -129,6 +129,7 @@ height:auto;
               1/22/26 - Dingbatz - Clifton<br>
               1/30/26 - Sleeping Cat Art Studio - Bordentown<br>
               2/28/26 - Asbury Park Brewery - Asbury Park<br>
+              4/9/26 - Asbury Park Brewery - Asbury Park<br>
                   
                   
             </p>
