new dates and press kit

--- a/contactus.html
+++ b/contactus.html
@@ -142,7 +142,7 @@ height:auto;
                
                 <div class="item2">
                     <img
-                    src="https://drive.google.com/thumbnail?id=1P_QPMG6LHcA2bNgmMMlv3zS5ztQx-7R_"
+                    src="https://files.catbox.moe/y5rt6i.jpeg"
                     class="illustration2"
                     alt="king clark"
                     width="100%"
