--- a/presskit.html
+++ b/presskit.html
@@ -290,7 +290,7 @@ height:auto;
             Tidal Basin Stage - Washington D.C.<br>
           Wild Air Beerworks - Asbury Park <br>
           3BR - Keyport <br>
-          
+          Dingbatz - Clifton <br>
            WTSR at TCNJ - Ewing<br>
         Pino's - Highland Park<br>
            Georgie's - Asbury Park<br>
@@ -360,6 +360,8 @@ height:auto;
     Sophie Swanson<br>
     Midcentury<br>
     Kiersten Blue<br>
+    Sports On The Radio<br>
+    Beach Daze<br>
     Shire Folk<br>
     Bran'Spank'an'Noop<br>
     Shrinkin Minkin<br>
