--- a/presskit.html
+++ b/presskit.html
@@ -150,7 +150,7 @@ height:auto;
         </div>
         <div class="item2">
             <img
-            src="A839B1B9-0524-48FB-86BC-56A8D83F7CB9.png"
+            src="https://files.catbox.moe/759c97.jpg"
             class="illustration2"
             alt="king clark"
             width="100%"
