--- a/upcoming.html
+++ b/upcoming.html
@@ -192,7 +192,7 @@ height:auto;
             </div>
             <div class="item2">
                 <img
-                        src="IMG_4261.jpeg"
+                        src="https://files.catbox.moe/z47tcy.jpg"
                         class="illustration2"
                         alt="king clark"
                         width="100%"
